<resources>
    <string name="app_name">Database Demo</string>
    <string name="show_event">List of Events</string>
    <string name="show_dialog">show dialog</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_details">Event Details</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_party_will_be_arranged">Birthday party will be arranged</string>
    <string name="status">Status:</string>
    <string name="accepted">Accepted</string>
    <string name="date">Date:</string>
    <string name="nov_15_2021_16_25_59">Nov 15, 2021 16:25:59</string>
    <string name="delete">Delete</string>
    <string name="update">update</string>
</resources>